<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/space_cadet"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/space_cadet">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_left"
        android:background="@color/space_cadet"
        android:contentDescription="@string/action_go_back"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="40dp"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/password_TopImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/password_bg"
        app:layout_constraintBottom_toTopOf="@+id/password_enterTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/password_enterTV"
        style="@style/Typography.Heading1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/UnlockPassword_Message_EnterYourPassword"
        android:textColor="@color/wa_white"
        app:layout_constraintBottom_toTopOf="@+id/password_msgContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_TopImg" />

    <LinearLayout
        android:id="@+id/password_msgContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_enterTV">

        <TextView
            android:id="@+id/password_msgTV"
            style="@style/Typography.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="start"
            android:importantForAccessibility="yes"
            android:text="@string/LockPasswordSet_Message_Hint"
            android:textAlignment="viewStart"
            android:textColor="@color/wa_white" />

        <TextView
            android:id="@+id/password_msgHintSecond"
            style="@style/Typography.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/LockPasswordSet_Message_Hint_guessable"
            android:textAlignment="viewStart"
            android:textColor="@color/wa_white" />

        <TextView
            android:id="@+id/password_msgHintThird"
            style="@style/Typography.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/LockPasswordSet_Message_Hint_length"
            android:textAlignment="viewStart"
            android:textColor="@color/wa_white" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_editText"
        style="@style/Password_EditText"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:letterSpacing="0"
        android:maxLines="1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textAlignment="gravity"
        android:textColorHint="@color/dark_purple"
        app:layout_constraintBottom_toTopOf="@+id/password_left_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_msgContainer"
        tools:text="bjbewjfqw bjfjwq">

        <requestFocus />
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/password_eye"
        android:layout_width="22dp"
        android:layout_height="15dp"
        android:background="@drawable/eye"
        android:contentDescription="@string/action_show_password"
        android:focusable="true"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@id/password_editText"
        app:layout_constraintEnd_toEndOf="@id/password_editText"
        app:layout_constraintTop_toTopOf="@id/password_editText" />

    <View
        android:id="@+id/passwordClickView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/action_show_password"
        app:layout_constraintBottom_toBottomOf="@id/password_eye"
        app:layout_constraintEnd_toEndOf="@id/password_eye"
        app:layout_constraintStart_toStartOf="@id/password_eye"
        app:layout_constraintTop_toTopOf="@id/password_eye" />

    <TextView
        android:id="@+id/password_left_button"
        style="@style/Unlock_White_Text_Back"
        android:text="@string/LockSelect_Action_Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_right_button"
        style="@style/Unlock_White_Text_Next"
        android:text="@string/LockSelect_Action_Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>